--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   colorful_safe_area: ^1.0.0
   google_ml_kit: ^0.16.3
   image_picker: ^1.0.7
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
